# ai-dashboards

./: .gitignore  Project_Planning.md  README.MD  README.md  README_updated.MD  grades.csv  package-lock.json  project_file_structure  project_file_structure.md  pyproject.toml  requirements.txt  test_data_2.csv  weekly_deliverables_plan.md
app/: data_main.py  main.py
app/data/: AI_Engine.py  chart_builder.py  csv_prompt_builder.py  data_info.py  data_loader.py  data_main.py  data_modify.py  models.py  prompt_builder.py  recommendation_requester.py  session_manager.py  summary_builder.py
app/web/: README.md  index.html  package-lock.json  package.json
app/web/src/: main.js
app/web/src/css/: analysis.css  base.css  footer.css  navbar.css  results.css  settings.css  tokens.css  upload.css
app/web/src/js/: export.js  files.js  reports.js  router.js  state.js  user.js  utils.js
datasets/: courses.csv
datasets/school/: students.csv
datasets/starbucks_nutrition/: starbucks-menu-nutrition-food.csv
docs/: Website_README.md  datasets.md  prompt_handler_plan.md
